# RaytracingCPU

./: CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
cmake/: shader.cmake
src/: BlueMaterial.cpp  CMakeLists.txt  Camera.cpp  Camera.hpp  GlassMaterial.cpp  GoldMaterial.cpp  GreyMaterial.cpp  Intersectable.cpp  Intersectable.hpp  Intersection.cpp  Intersection.hpp  LessDenseMaterial.cpp  Light.cpp  Light.hpp  MarbleMaterial.cpp  Material.cpp  Material.hpp  MaterialFactory.cpp  MaterialFactory.hpp  MaterialInput.hpp  MaterialInterface.hpp  MaterialLoader.cpp  MaterialLoader.hpp  MirrorMaterial.cpp  Ray.cpp  Ray.hpp  RealGlassMaterial.cpp  RefractMaterialTemplate.cpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  SingleColorBPMaterialTemplate.cpp  SingleColorCTMaterialTemplate.cpp  SingleColorMCMaterialTemplate.cpp  SingleColorMetallicCTMaterialTemplate.cpp  SingleColorMetallicMCMaterialTemplate.cpp  SingleColorNonMetallicCTMaterialTemplate.cpp  SingleColorNonMetallicMCMaterialTemplate.cpp  Transform.cpp  (+2 more)
src/Materials/: BlueMaterial.cpp  CMakeLists.txt  GoldMaterial.cpp  GreyMaterial.cpp  MarbleMaterial.cpp  SingleColorBPMaterialTemplate.cpp  SingleColorCTMaterialTemplate.cpp
src/Util/: CMakeLists.txt  Color.cpp  Color.hpp  DynamicLoader.cpp  DynamicLoader.hpp  ExecutionPolicy.hpp  Lighting.cpp  Lighting.hpp  Math.cpp  Math.hpp  PixelIterator.hpp  Random.cpp  Random.hpp  ReinhardToneMapping.hpp  SDLHandle.cpp  SDLHandle.hpp  SDLWindow.cpp  UnixDynamicLoader.cpp  Window.cpp  Window.hpp  WindowsDynamicLoader.cpp
